sas-core/main/default/objects/IRR_ManualOverride__c/IRR_ManualOverride__c.object-meta.xml
<CustomObject>
    <label>Manual Override</label>
    <nameField>
        <displayFormat>MO-{000000}</displayFormat>
        <label>Manual Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>