sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_DepartureDate__c.field-meta.xml
<CustomField>
    <fullName>IRR_DepartureDate__c</fullName>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>