sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_FlightId__c.field-meta.xml
<CustomField>
    <fullName>IRR_FlightId__c</fullName>
    <inlineHelpText>Enter Flight Id in format SK1238-20200213-ARN-CPH. Flight Id cannot be combined with other filters.</inlineHelpText>
    <label>Flight Id</label>
    <length>23</length>
    <type>Text</type>
</CustomField>