sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_FlightNumber__c.field-meta.xml
<CustomField>
    <fullName>IRR_FlightNumber__c</fullName>
    <inlineHelpText>Enter Flight Number in format SK1238</inlineHelpText>
    <label>Flight Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>