sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_StartBlockDate__c.field-meta.xml
<CustomField>
    <fullName>IRR_StartBlockDate__c</fullName>
    <inlineHelpText>Enter start date for block period in UTC. Automatic communication will be blocked from this date according to the filters set.</inlineHelpText>
    <label>Start Block Date (UTC)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>