sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_StartBlockTime__c.field-meta.xml
<CustomField>
    <fullName>IRR_StartBlockTime__c</fullName>
    <inlineHelpText>Enter start time for block period in UTC. Automatic communication will be blocked from this time according to the filters set.</inlineHelpText>
    <label>Start Block Time (UTC)</label>
    <required>true</required>
    <type>Time</type>
</CustomField>