sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_StartBlockValue__c.field-meta.xml
<CustomField>
    <fullName>IRR_StartBlockValue__c</fullName>
    <description>Used in SOQL criteria</description>
    <formula>YEAR(IRR_StartBlockDate__c) * 100000000 + MONTH(IRR_StartBlockDate__c) * 1000000 + DAY(IRR_StartBlockDate__c) * 10000 + HOUR(IRR_StartBlockTime__c) * 100 + MINUTE(IRR_StartBlockTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Block Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>