sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_StationArrival__c.field-meta.xml
<CustomField>
    <fullName>IRR_StationArrival__c</fullName>
    <label>Station Arrival</label>
    <length>3</length>
    <type>Text</type>
</CustomField>