sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_StationDeparture__c.field-meta.xml
<CustomField>
    <fullName>IRR_StationDeparture__c</fullName>
    <label>Station Departure</label>
    <length>3</length>
    <type>Text</type>
</CustomField>