sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_StopBlockDate__c.field-meta.xml
<CustomField>
    <fullName>IRR_StopBlockDate__c</fullName>
    <inlineHelpText>Enter stop date for block period in UTC. Automatic communication will be blocked until this date according to the filters set.</inlineHelpText>
    <label>Stop Block Date (UTC)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>