sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_StopBlockTime__c.field-meta.xml
<CustomField>
    <fullName>IRR_StopBlockTime__c</fullName>
    <inlineHelpText>Enter stop time for block period in UTC. Automatic communication will be blocked until this time according to the filters set.</inlineHelpText>
    <label>Stop Block Time (UTC)</label>
    <required>true</required>
    <type>Time</type>
</CustomField>