sas-core/main/default/objects/IRR_ManualOverride__c/fields/IRR_StopBlockValue__c.field-meta.xml
<CustomField>
    <fullName>IRR_StopBlockValue__c</fullName>
    <description>Used in SOQL query criteria</description>
    <formula>YEAR(IRR_StopBlockDate__c) * 100000000 + MONTH(IRR_StopBlockDate__c) * 1000000 + DAY(IRR_StopBlockDate__c) * 10000 + HOUR(IRR_StopBlockTime__c) * 100 + MINUTE(IRR_StopBlockTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stop Block Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>