sas-core/main/default/objects/IRR_ManualOverride__c/validationRules/Filter_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Filter_Required</fullName>
    <active>true</active>
    <description>At least one filter is required</description>
    <errorConditionFormula>ISBLANK(IRR_FlightId__c) &amp;&amp;
ISBLANK(IRR_FlightNumber__c) &amp;&amp;
ISBLANK(IRR_StationArrival__c) &amp;&amp;
ISBLANK(IRR_StationDeparture__c) &amp;&amp;
ISBLANK(IRR_DepartureDate__c)</errorConditionFormula>
    <errorMessage>At least one filter is required</errorMessage>
</ValidationRule>