sas-core/main/default/objects/IRR_ManualOverride__c/validationRules/FlightId_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>FlightId_Format</fullName>
    <active>true</active>
    <description>Flight Id must be entered in the correct format</description>
    <errorConditionFormula>!ISBLANK(IRR_FlightId__c) &amp;&amp;
!REGEX(
  IRR_FlightId__c,
  &quot;([A-Z]{2})([0-9]{4})-([0-9]{8})-([A-Z]{3})-([A-Z]{3})&quot;
)</errorConditionFormula>
    <errorDisplayField>IRR_FlightId__c</errorDisplayField>
    <errorMessage>Flight Id must be entered in the correct format, e.g. SK1238-20200213-ARN-CPH</errorMessage>
</ValidationRule>