sas-core/main/default/objects/IRR_ManualOverride__c/validationRules/FlightNumber_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>FlightNumber_Format</fullName>
    <active>true</active>
    <description>Flight Number must be entered in the correct format</description>
    <errorConditionFormula>!ISBLANK(IRR_FlightNumber__c) &amp;&amp; 
!REGEX(
  IRR_FlightNumber__c,
  &quot;([A-Z]{2})([0-9]{4})&quot;
)</errorConditionFormula>
    <errorDisplayField>IRR_FlightNumber__c</errorDisplayField>
    <errorMessage>Flight Number must be entered in the correct format, e.g. SK1238</errorMessage>
</ValidationRule>