sas-core/main/default/objects/IRR_ManualOverride__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IRR_FlightId__c</columns>
    <columns>IRR_FlightNumber__c</columns>
    <columns>IRR_DepartureDate__c</columns>
    <columns>IRR_StationDeparture__c</columns>
    <columns>IRR_StationArrival__c</columns>
    <columns>IRR_StartBlockDate__c</columns>
    <columns>IRR_StartBlockTime__c</columns>
    <columns>IRR_StopBlockDate__c</columns>
    <columns>IRR_StopBlockTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>